--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
     "cloudinary": "^1.11.0",
     "concurrently": "^3.6.0",
     "cookie-parser": "^1.4.3",
+    "crypto-js": "^4.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-formidable": "^1.0.0",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.1.6",
-    "multer": "^1.3.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^4.6.7",
     "react-dropzone": "^4.2.12",
     "react-images": "^0.5.17",
     "react-moment": "^0.7.7",
